--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <title>Generador de Cartas</title>         
   </head>
   <body onload="generar()"class="bg-success p-5">
+    <div id="color" class="text-dark">
     <div
       class="container bg-white rounded-4"
       style="height: 500px; width: 300px;"
@@ -23,13 +24,14 @@
           <p class="icono texto-mediano" id="icono">Icono</p>
         </div>
         <div class="col align-self-center text-center align-content-center p-2">
-          <p class="display-1 carta texto-muy-grande fw-bold text-danger" id="carta" ;">Carta</p>
+          <p class="display-1 carta texto-muy-grande fw-bold" id="carta" ;">Carta</p>
         </div>
-        <div class="col align-self-end text-end align-content-end">
-          <p class="icono2 texto-mediano" id="icono">Icono</p>
+        <div class="col align-self-end">
+          <p class="icono2 texto-mediano" id="icono2">Icono</p>
         </div>
       </div>
     </div>
+  </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
